# onedrive-sync

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  build.rs  install-task.ps1
.github/workflows/: release.yml
app-src/: onedrive-sync-core.discovery.ps1  onedrive-sync-core.engine.ps1  onedrive-sync-core.ps1  onedrive-sync-core.run.ps1  onedrive-sync-tray.ps1  onedrive-sync.ps1  sync-config.ps1
docs/: architecture-recommendation.md
scripts/: deploy.ps1  get.ps1  install.ps1  smoke.ps1  uninstall.ps1
src/: actions.rs  config.rs  conflicts.rs  discovery.rs  engine.rs  events.rs  filter.rs  git.rs  gui.rs  icon.rs  jsonio.rs  lib.rs  main.rs  paths.rs  prune.rs  run.rs  state.rs
tests/: divergence.rs  onedrive-sync.Tests.ps1  run-tests.ps1  verify-handlers.ps1  verify-windows.ps1
