[package]
name = "ods"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.34.3"
md-5 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tray-icon = "0.24.1"
walkdir = "2.5.0"

# Small, optimized release binary. Unwinding is kept (no panic="abort") so a
# panic in a background sync thread is contained instead of killing the tray.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
